# firefox_url_open_bug

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs
clients/wasm_bindgen/src/: lib.rs
clients/yew/: Cargo.toml  index.html
clients/yew/src/: lib.rs
server/: README.md
server/src/: main.rs
