[package]
name = "yew_firefox_bug_demo"
version = "0.1.0"
authors = ["Cliff Matthews <clifford.t.matthews@gmail.com>"]
edition = "2018"

[dependencies]
yew = { version = "0.14", features = ["web_sys"] }
anyhow = "1"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2"
log = "0.4"
wasm-logger = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
